@@ -82,7 +82,7 @@
                                     <div class="col-6 mb-3">
                                         <label for="ip" class="form-label">IP Address:</label>
                                         <input type="text" id="ip" class="form-control" placeholder="Enter IP Address"
-                                            value="192.168.139.129" />
+                                            value="192.168.186.12" />
                                     </div>
                                 </div>
                                 <div class="row g-2">
@@ -198,9 +198,14 @@
                         </button>
                     </div>
                     <div class="col-6 mb-3">
-                        <label for="domain" class="form-label">domain:</label>
+                        <label for="domain" class="form-label">Domain:</label>
                         <input type="text" id="domain" class="form-control"
                             placeholder="Enter your domain" value="example.com" />
+                    </div>
+                    <div class="col-6 mb-3">
+                        <label for="domain" class="form-label">Folder name:</label>
+                        <input type="text" id="folder_name" class="form-control"
+                            placeholder="Enter your domain" value="example" />
                     </div>
                 </div>
             </div>
