@@ -1,3 +1,4 @@
 fixed file format error while moving from windows to unix (CRLF --> LF)
 fixed mutiple copy execution ,separated domain from the socket.on('configue_webserver')
-  
+
+added folder name in webserver config
